[graphs] add: graphs structures

--- a/src/pages/App/sass/_colors.scss
+++ b/src/pages/App/sass/_colors.scss
@@ -16,4 +16,5 @@ $oceanGreen: #36B37E;
 $tuna: #363A42;
 $redOrange: #FF2E2E;
 $chestnut: #B44747;
+$errorHover: #FAC3C3;
 $cornflowerBlue: #eaeaea;
