--- a/src/pages/App/sass/globals.scss
+++ b/src/pages/App/sass/globals.scss
@@ -55,3 +55,20 @@ a {
     }
   }
 }
+
+.button-custom {
+  @apply bg-white border border-solid rounded transition duration-500 ease-in-out hover:bg-gray-300 hover:text-gray-700;
+}
+
+.button-large,
+.button-action {
+  @apply font-bold py-3 px-6;
+}
+
+.button-small {
+  @apply py-2 px-4;
+}
+
+.button-disabled {
+    @apply transition duration-100 ease-in pointer-events-none bg-athensGray border border-solid border-athensGray text-regentGray;
+}
